fixed: exportar a excel html

--- a/templates/clientes/cuentas_por_cobrar.html.twig
+++ b/templates/clientes/cuentas_por_cobrar.html.twig
@@ -57,7 +57,8 @@
                 </h2>
             </div>
           <div class="body">
-            <form id="frm-clientes-avanzado">
+            <form id="frm-filtros-avanzado" name="frm-filtros-avanzado">
+              <input type="hidden" name="exportar" id="exportar">
                 <div class="row clearfix">
 
                    {% if is_granted('ROLE_CLIENTE') %}
@@ -154,14 +155,12 @@
                   </a>
                   <ul class="dropdown-menu pull-right">
                     <li>
-                      <a href="javascript:void(0);">Action</a>
+                      <a href="javascript:void(0);">Acciones</a>
                     </li>
                     <li>
-                      <a href="javascript:void(0);">Another action</a>
+                      <a href="#" onclick="exportar();return false;" >Exportar Excel</a>
                     </li>
-                    <li>
-                      <a href="javascript:void(0);">Something else here</a>
-                    </li>
+                    
                   </ul>
                 </li>
               </ul>
@@ -306,7 +305,12 @@
 
 {% block body_javascript %}
 <script type="text/javascript">
-  
+    
+  function exportar(){
+    $("#exportar").val("true");
+    $("#frm-filtros-avanzado").submit();
+
+   }
   $(document).ready(function(){
     var id="";
 
