--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -91,7 +91,7 @@
                     <div class="card">
                         <div class="header">
                             <h2>
-                                <strong>Estados</strong> XML</h2>
+                                <strong>Estados</strong> Facturas</h2>
                             <ul class="header-dropdown m-r--5">
                                 <li class="dropdown">
                                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -140,39 +140,6 @@
     });
     //Charts
     function initCharts() {
-        //Chart Bar
-        $('.chart.chart-bar').sparkline([6,4,8,6,8,10,5,6,7,9,5,6,4,8,6,8,10,5,6,7,9,5], {
-            type: 'bar',
-            barColor: '#fff',
-            negBarColor: '#fff',
-            barWidth: '4px',
-            height: '45px'
-        });
-
-
-        //Chart Pie
-        $('.chart.chart-pie').sparkline([30, 35, 25, 8], {
-            type: 'pie',
-            height: '45px',
-            sliceColors: ['rgba(255,255,255,0.70)', 'rgba(255,255,255,0.85)', 'rgba(255,255,255,0.95)', 'rgba(255,255,255,1)']
-        });
-
-
-        //Chart Line
-        $('.chart.chart-line').sparkline([9,4,6,5,6,4,7,3], {
-            type: 'line',
-            width: '60px',
-            height: '45px',
-            lineColor: '#fff',
-            lineWidth: 1.3,
-            fillColor: 'rgba(0,0,0,0)',
-            spotColor: 'rgba(255,255,255,0.40)',
-            maxSpotColor: 'rgba(255,255,255,0.40)',
-            minSpotColor: 'rgba(255,255,255,0.40)',
-            spotRadius: 3,
-            highlightSpotColor: '#fff'
-        });
-
 
         try {
             // polar chart
@@ -183,7 +150,7 @@
                     type: 'polarArea',
                     data: {
                         datasets: [{
-                            data: [15, 18, 9, 6, 19],
+                            data: [{{ estadosFacturas|join(',') }}],
                             backgroundColor: [
                                 "rgba(0, 123, 255,0.9)",
                                 "rgba(0, 123, 255,0.8)",
@@ -194,10 +161,8 @@
 
                         }],
                         labels: [
-                            "Aceptado",
-                            "Cancelado",
-                            "Por pagar",
-                            "Otro"
+                            "Facturado",
+                            "Por facturar",
                         ]
                     },
                     options: {
