fix: cambio dashboard

--- a/templates/home/menu_admin.html.twig
+++ b/templates/home/menu_admin.html.twig
@@ -28,7 +28,7 @@
 <li>
 <a href="{{path('cuentas_por_cobrar_clientes')}}" class=" waves-effect waves-block">
     <i class="fas fa-folder"></i>
-    <span>Cuentas por cobrar</span>
+    <span>Cuentas por pagar</span>
 </a>
 </li>
 
