--- a/templates/clientes/cuentas_por_cobrar.html.twig
+++ b/templates/clientes/cuentas_por_cobrar.html.twig
@@ -15,7 +15,7 @@
                   <i class="material-icons">home</i> Home</a>
               </li>
               <li class="breadcrumb-item bcrumb-2">
-                <a href="javascript:void(0);">Cuentas por cobrar</a>
+                <a href="javascript:void(0);">Cuentas por pagar</a>
               </li>
             </ul>
           </div>
