--- a/templates/archivos/files.html.twig
+++ b/templates/archivos/files.html.twig
@@ -40,7 +40,7 @@
       <div class="row clearfix">
        {% for file in files %}
         <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-          <a href="#" class="card">
+          <a href="{{asset('uploads/'~directorio~'/'~file)}}" class="card" target="blank">
             <div class="card-body center">
               <i class="large material-icons" style="color: #ddd ">insert_drive_file</i>
                 <p>{{file}}</p>
