cambio de nombres en menu y pagos

--- a/templates/clientes/pagos_excel.html.twig
+++ b/templates/clientes/pagos_excel.html.twig
@@ -9,8 +9,8 @@
                       <th>Tipo de pago</th>
                       <th>Tipo Transacción</th>
                       <th>Folio</th>
-                      <th>Facturado</th>
-                      <th>Por Facturar</th>
+                      <th>Comprobado</th>
+                      <th>Por Comprobar</th>
                       <th>Facturas</th>
                     </tr>
                   </thead>
