--- a/templates/home/menu_cliente.html.twig
+++ b/templates/home/menu_cliente.html.twig
@@ -7,14 +7,14 @@
 
 <a href="{{path('pagos_clientes')}}" class=" waves-effect waves-block">
     <i class="fas fa-folder"></i>
-    <span>Gastos y compras</span>
+    <span>Cheques y transferencias</span>
 </a>
 </li>
 
 <li>
 <a href="{{path('cuentas_por_cobrar_clientes')}}" class=" waves-effect waves-block">
     <i class="fas fa-folder"></i>
-    <span>Cuentas por pagar</span>
+    <span>Facturas por pagar</span>
 </a>
 </li>
 
