--- a/templates/clientes/cuentas_por_cobrar.html.twig
+++ b/templates/clientes/cuentas_por_cobrar.html.twig
@@ -217,6 +217,7 @@
                       <th>Valor</th>
                       <th>IVA</th>
                       <th>Total</th>
+                      <th>Estado Factura</th>
                       <th>Cancelable</th>
                       <th>En Lista Negra</th>
                       <th>Acciones</th>
@@ -233,6 +234,7 @@
                       <td>$ {{cuenta.valor|number_format(2,'.',',')}}</td>
                       <td>$ {{cuenta.iva|number_format(2,'.',',')}}</td>
                       <td>$ {{cuenta.total|number_format(2,'.',',')}}</td>
+                      <td>{{cuenta.cfdi}}</td>
                       <td>{{cuenta.cancelable}}</td> 
                       <td>No</td>
                       <td> 
@@ -401,10 +403,10 @@
 
       $.post(action,data,function(data){
         if(data=="ok"){
-          alert("Cobro asociado exitsamente");
+          swal("Cobro asociado exitsamente");
           location.reload();
         }else{
-          alert(data);
+          swal(data);
         }
         $("#exampleModalCenter").modal('hide');
       })
