--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -83,7 +83,7 @@
                 <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"
                     aria-expanded="false"></a>
                 <a href="javascript:void(0);" class="bars"></a>
-                <a class="navbar-brand" href="{{asset('/admin/home')}}">
+                <a class="navbar-brand" href="#">
                     <img src="{{asset('adminlte/assets/images/logo.png')}}"  height="30px" alt="" />
                     <span style="font-size: 1rem" class="logo-name">CONTADORES</span>
                 </a>
